Fixed clipped title

--- a/styles/base.less
+++ b/styles/base.less
@@ -253,7 +253,7 @@ body {
 	text-shadow: 0px 1px 1px #FFF;
     text-align: center;
     cursor: default;
-    height: 12px;
+    height: 1.3em;
 	text-overflow: ellipsis;
     overflow: hidden;
 }
